--- a/public/CSS/skeleton.css
+++ b/public/CSS/skeleton.css
@@ -18,6 +18,16 @@ body {
 .main-body {
     background: dodgerblue;
     padding: 1em;
+    margin: 1em;
+}
+
+.counter {
+    color: pink;
+}
+
+.errors {
+    color: crimson;
+    text-align: center;
 }
 
 html {
@@ -25,7 +35,7 @@ html {
     text-align: center;
 }
 
-button {
+.button {
     height: 30px;
     width: 70px;
     border-radius: 0.3em;
