--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,15 +3,8 @@
     <form action="/greet" method="POST">
         <input type="text" name="textitem" class="inputElements" placeholder="Enter your name here"
             value="{{textBoxValue.textitem}}">
-        <h1 name="counter"></h1>
-        <div>
-            <p>{{counter}}</p>
-        </div>
-        <div>
-            <p>{{#if messages}}
-                {{messages.index}}
-                {{/if}}
-            </p>
+        <div class="counter">
+            <h1>{{counter}}</h1>
         </div>
         <label>
             <input type="radio" name="selector" value="english">English
@@ -24,10 +17,14 @@
         </label>
 </div>
 <button class="greetButton" type="submit" name="button">greet</button>
+<div class="errors">
+    <h3>
+        {{messages.errors}}
+    </h3>
+</div>
 <h1 id="txtBox">
     <p>{{txtBox}}</p>
 </h1>
-
 <button class="resetButton" type="reset" name="button">reset</button>
 </form>
 </div>
