--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>greetings</title>
     <link rel="stylesheet" href="/CSS/skeleton.css">
+    <script src="/greet-dom.js"></script>
 </head>
 
 <body>
