--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,7 +47,7 @@
             </tr>
         </thead>
         <tbody>
-            {{#each kittens}}
+            {{#each hello}}
             <tr>
                 <th scope="row">{{id}}</th>
                 <td>{{name}}</td>
@@ -58,3 +58,5 @@
     </table>
 </div>
 </div>
+
+
