--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,8 @@
 <div class="main-body">
     <h2>Greetings Language Converter App (GLCA)</h2>
     <form action="/greet" method="POST">
-        <input type="text" name="textitem" class="inputElements" placeholder="Enter your name here"
-            value="{{textBoxValue.textitem}}">
+        <input type="text" name="textItem" class="inputElements" placeholder="Enter your name here"
+            value="{{textBoxValue.textItem}}">
         <div class="counter">
             <h1>{{counter}}</h1>
         </div>
@@ -22,14 +22,33 @@
         {{messages.errors}}
     </h3>
 </div>
+<div class="txtBox">
 <h1 id="txtBox">
     <p>{{txtBox}}</p>
 </h1>
+</div>
 <button class="resetButton" type="reset" name="button">reset</button>
 </form>
-<div>
+
+<div class="six columns">
+        <h5>Database</h5>
+        <form action="/data" method="POST">
+        <button class="button-primary" type="submit" name="button">Add</button>
+        </form>
+        <h5>Home</h5>
+        <table>
+          <tr>
+            <td>
+              <a href="/datas">Total</a>
+            </td>
+            <td class="{{greetedUsers}}"> Names<span class="totalSettings">{{greetedUsers}}</span> </td>
+          </tr>
+        </table>
+
+      </div>
+{{!-- <div>
     <h4 class="">greeted for</h4>
-    <div class="">
+    {{!-- <div class="">
         <form action="/filter" method="POST">
             <strong>Filter:</strong>
             <input class="" type="radio" name="daysFilter" value="all"> All
@@ -37,8 +56,8 @@
             <input class="" type="radio" name="daysFilter" value="more"> More 3 times
             <input class="" type="submit" value="Filter">
         </form>
-    </div>
-    <table class="">
+    </div> --}}
+    {{!-- <table class="">
         <thead>
             <tr>
                 <th>#</th>
@@ -55,8 +74,8 @@
             </tr>
             {{/each}}
         </tbody>
-    </table>
-</div>
+    </table> --}}
+</div> 
 </div>
 
 
