--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -1,29 +1,9 @@
-{{#each datas}}
-<div class="item-name">
-<a href="/counted/ {{this.name}}"> {{this.name}}</a>
-</div>
-{{/each}}
-
-<form action="/" method="get">
-<button >Home</button>
-</form>
-
 <div class="main-body">
-    <h1>Actions</h1>
-
-    <table>
-        <tr>
-        <th>Type</th>
-        <th>Price</th>
-        <th>When</th>
-        </tr>
-        {{#each actions}}
-        <tr>
-        <td>{{type}}</td>
-        <td>{{cost}}</td>
-        <td>{{ago}}</td>
-        <td>{{timestamp}}</td>
-        </tr>
-        {{/each}}
-    </table>
+    <form action="/" method="GET">
+        <button id="homeBtn" class="homeButton">Home</button>
+    </form>
+    {{#each name}}
+    <h2><a href="/counter/{{this.name}}">{{this.name}}</a></h2>
+    {{/each}}
 </div>
+
