--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,59 +23,15 @@
     </h3>
 </div>
 <div class="txtBox">
-<h1 id="txtBox">
-    <p>{{txtBox}}</p>
-</h1>
+    <h1 id="txtBox">
+        <p>{{txtBox}}</p>
+    </h1>
 </div>
-<button class="resetButton" type="reset" name="button">reset</button>
+<button class="resetButton" id="reset" name="button"> <a href="/reset">reset</a></button>
 </form>
-
 <div class="six columns">
-        <h5>Database</h5>
-        <form action="/data" method="POST">
-        <button class="button-primary" type="submit" name="button">Add</button>
-        </form>
-        <h5>Home</h5>
-        <table>
-          <tr>
-            <td>
-              <a href="/datas">Total</a>
-            </td>
-            <td class="{{greetedUsers}}"> Names<span class="totalSettings">{{greetedUsers}}</span> </td>
-          </tr>
-        </table>
-
-      </div>
-{{!-- <div>
-    <h4 class="">greeted for</h4>
-    {{!-- <div class="">
-        <form action="/filter" method="POST">
-            <strong>Filter:</strong>
-            <input class="" type="radio" name="daysFilter" value="all"> All
-            <input class="" type="radio" name="daysFilter" value="three"> 3 times or less
-            <input class="" type="radio" name="daysFilter" value="more"> More 3 times
-            <input class="" type="submit" value="Filter">
-        </form>
-    </div> --}}
-    {{!-- <table class="">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>counter</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each hello}}
-            <tr>
-                <th scope="row">{{id}}</th>
-                <td>{{name}}</td>
-                <td>{{counter}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table> --}}
-</div> 
+    <td class="{{greetedUsers}}"><span class="totalSettings">{{greetedUsers}}</span> </td>
 </div>
-
-
+<form class="main" action="/data" method="get">
+    <button id="greetedButton" class="greetedBtn">Show Greeted</button>
+</form>
