--- a/public/CSS/skeleton.css
+++ b/public/CSS/skeleton.css
@@ -61,11 +61,17 @@ html {
 .greetButton {
     background-color: darkgreen;
     font-size: 1em;
+    padding: 0.5em;
+    margin: 0.5em;
+    border-radius: 0.5em;
 }
 
 .resetButton {
     background-color: orangered;
     font-size: 1em;
+    padding: 0.5em;
+    margin: 0.5em;
+    border-radius: 0.5em;
 }
 
 .label-radio-container {
@@ -75,4 +81,7 @@ html {
 .greetedBtn {
     background-color: rgb(0, 255, 255);
     font-size: 1em;
+    padding: 0.5em;
+    margin: 0.5em;
+    border-radius: 0.5em;
 }
