--- a/public/CSS/skeleton.css
+++ b/public/CSS/skeleton.css
@@ -85,3 +85,11 @@ html {
     margin: 0.5em;
     border-radius: 0.5em;
 }
+
+.homeButton {
+    background-color: rgb;
+    font-size: 1em;
+    padding: 0.5em;
+    margin: 0.5em;
+    border-radius: 0.5em;
+}
